--- a/src/Presentation/CTM.Win/Forms/FrmMain.resx
+++ b/src/Presentation/CTM.Win/Forms/FrmMain.resx
@@ -3419,56 +3419,115 @@
   </data>
   <data name="barButtonItem39.Glyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAAHnRFWHRUaXRsZQBMaW5lV2l0
-        aG91dE1hcmtlcnM7TGluZTu0nPK3AAACcklEQVQ4T2WS7U+SURjGzz9i/CN9aW1trbWVrS9pUW5tLS1S
-        cc0syHKuVYQazk+9aK3ZTHOLRCqDIQJTrGZmtWkvUsqrCAg8PDxwdZ/DA9L48Hvu83Ld17mfcx9mefpx
-        hsD9J5wPgoGRahbRP7yIvsccP8yP/Lj3cEFgejA/w3qHPCgCJehTiTUUVYCCoIjugVmwnsE5sZiVFGSk
-        PKEgLWIJPk6razvZXQrkYuxzgd20uIVBRUib1YiETB6prIz1cBoa7RukMjIUMjCYnWC8DF5OyVlW2R1z
-        cZLwfo1Bc9KOb+tJmuegKAV0mRxgBrNLlJOiU/76fEjsSGKcTFOiinclCk2jDdP+TdrPYXtHhkwGnbff
-        g10zOUU5XLjQ3gJX/UGsDFkQ+RkgsQzPlwg0DVZMz29QYg7xFBkQcr6Ay7fegV2560BeKSJBBtw5tPYL
-        y4P9cB7ej9eDI6g7Ooop3x9sUZIgWSInK+jofVtrwE/huD+HUHfkGUbvDMN5aB+WB8wIrv2uNeBl5Kgc
-        XhrfiBHupRA0x8fFybGkhI3vP7BkNsFxYC98zWcR3c6KFrfesIPpyUWSC4glJCGeXQpCc2wMVk8AUVrj
-        4ohAQngrg1WbHWGap6lDuus2sLYeO7I5hYQSPq1Sq+qfwzoXUJPURIrheIlQPEMxI9p7wTgF1to9LR4R
-        F++hC/PSv/+fQNDJnCAlcvg4SffVfNUKpjPaxMOpFlYT3MoSPJbYjHHS4qLPd5FBi2Gq5uHwjvA3UKbc
-        Gd7/eEpSL1zCuc5XYE0dk7Ym/STO6F/iNKFtn4C2bQKnWscrNF56IWjQlRnDiYucMds/ViRyyc+CSP0A
-        AAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAedEVYdFRpdGxlAExpbmVXaXRob3V0TWFya2VycztM
+        aW5lO7Sc8rcAAAJySURBVDhPZZLtT5JRGMbPP2L8I31pbW2ttZWtL2lRbm0tLVJxzSzIcq5VhBrOT71o
+        rdlMc4tEKoMhAlOsZma1aS9SyqsICDw8PHB1n8MD0vjwe+7zct3XuZ9zH2Z5+nGGwP0nnA+CgZFqFtE/
+        vIi+xxw/zI/8uPdwQWB6MD/Deoc8KAIl6FOJNRRVgIKgiO6BWbCewTmxmJUUZKQ8oSAtYgk+TqtrO9ld
+        CuRi7HOB3bS4hUFFSJvViIRMHqmsjPVwGhrtG6QyMhQyMJidYLwMXk7JWVbZHXNxkvB+jUFz0o5v60ma
+        56AoBXSZHGAGs0uUk6JT/vp8SOxIYpxMU6KKdyUKTaMN0/5N2s9he0eGTAadt9+DXTM5RTlcuNDeAlf9
+        QawMWRD5GSCxDM+XCDQNVkzPb1BiDvEUGRByvoDLt96BXbnrQF4pIkEG3Dm09gvLg/1wHt6P14MjqDs6
+        iinfH2xRkiBZIicr6Oh9W2vAT+G4P4dQd+QZRu8Mw3loH5YHzAiu/a414GXkqBxeGt+IEe6lEDTHx8XJ
+        saSEje8/sGQ2wXFgL3zNZxHdzooWt96wg+nJRZILiCUkIZ5dCkJzbAxWTwBRWuPiiEBCeCuDVZsdYZqn
+        qUO66zawth47sjmFhBI+rVKr6p/DOhdQk9REiuF4iVA8QzEj2nvBOAXW2j0tHhEX76EL89K//59A0Mmc
+        ICVy+DhJ99V81QqmM9rEw6kWVhPcyhI8ltiMcdLios93kUGLYarm4fCO8DdQptwZ3v94SlIvXMK5zldg
+        TR2Ttib9JM7oX+I0oW2fgLZtAqdaxys0XnohaNCVGcOJi5wx2z9WJHLJz4JI/QAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="barButtonItem39.LargeGlyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAAHnRFWHRUaXRsZQBMaW5lV2l0
-        aG91dE1hcmtlcnM7TGluZTu0nPK3AAAGwUlEQVRYR71XaVdVVRimrNSy8S/0C7LJPvSllVlqaqatVR9a
-        LVeZ5ZyaEw6YAyYpSigqkgJhMotoCijeywUug6CigqI5gwjey2W8l+npfd+99zkHp7XsQ6z1rGfv9+zz
-        PM8+e7v3NUz/PU0Y8gR45j/iWQ1us85ThLCnEzNPFSZnV+NxSGJkPQSZzFVIZGQ+GvsyDE4JElLLT+oQ
-        YUMS0irxf//tTPGCvPlrhD2zJ1UF6OnpR6inT8O0mZ1Qz4OOMdwOUjsY0s+IH4eBgQHsSC7lAM9JgN0H
-        KjBAAZwGD4OYCCtI/T7x7odwd6hX95l70U8BtjsD7NpfTqmgRXkmajYCNnMyCZhnSlwjqEzELKj7hEBD
-        I879uhYVc6dbzzhAbGIJBxjKAZ7dmVKmAmjxsjnTUbViMVou1GojVbfEpd2HLs1s1EV17nfJmF50tHWi
-        PmkvPNO+xOUDKdLvononB+gfQMy+YjtA3J9eCcAvBlmsuwdXc3Pg/uYrnImKhP/6TXnZzErNkMx4LJua
-        tsaN4wXwfPe1vOu71YDObjZmXWICB9i6t8gOwOvBATi9ElRG7a1tqEtOxPEvp6AmNgZtLb5BRgwWFpDw
-        3bqL8C5ZAM/sGWisPq2MBT0Wd3T1oI8CRCe4OcAwDvBcbFKJ7MwHRHU/0NSC6m1bkPfFZ6hNTkJ7oNMh
-        3ovWZh+qt0bj2BeTUZ+Tgw420qZs2MGsa+0mwB6XHeD3xGLZGPwCfyb5VEGT2kbz5asoWbkCR7+aSkaH
-        0N4ZRF16Bo5MnoSqmBi0tvjFkE3EUNq9+OdUGf6Y+p71rLdvAJt3n+QAwznA0G20Hrwu8onISKUfnJzb
-        7dwngduna5D//QxkjRmNwnlzcaeuXoQtdCpuI2bzhCmjcLG4UOptVO/t60fULkeArQkqgPpcBGYHeBbt
-        VDcGqtaDGxVVlpnTVIwIVyrLsOfzUajzFErfgANsijthB4je45Z1MQZOQWF+0SFuDEzNiYBmNo+f/C6Z
-        n0CgQ9UNenr7sXHHcQ7wPAcYtjneZQW4X9AJIy5MolJncWOg+XKFF/GT3kGt+wRa9XNmgxAFiIwtsAP8
-        RuvRRxvDiCfQhrnk9ViClonui0lDwBIXg3YlXl/uxa6Jb+OCS5lz3S/PQtYYPm03/J7PAV7gAMOjdhbK
-        zjRil0o9tHbvCreyIQtpBEjIdbYBHy7KwOifMzEv1oV9ebWovx3ApfJSMT/P5u0hMfY/wCrAum15doAN
-        sfmyLvbAEOpKihD/Ga1hcZFV87eFUHyuEWOXHcTxqpto8nXhWMV1RCR6MW5JOibOjEVkXC7Kau/AR2P9
-        gaCwArUDivn4Xr3lKAcYIQHWxeRJKjbwt1EIYRViN61lXYlb+p6aBoxdmo2CUzepb4tf9JYi7tO3kJV2
-        FNEZ1ZgSkYsJ4QexNrkMeRU3cJeC3qMwDB+Bj+5Vvx2xAjy/lj6HChCU1GymZhBCrceNnRPexqHsAnyy
-        OAsFlTeUkJ5RXWkJ4sa/iZrCAqqHLKOzV1oQl3MW30blYzQt16I4N243d8gzPtRWREmAFyXAmuijdN32
-        6xmplCYtm+RkFeCDWXuRlpYvfWVC4Upp5uNHouYEm6t37rUqbmEmMNffakW25wq1u6XPAcKjDlsBXojg
-        APQbwBgrITYKoejMbXxMmy01NQ87xo3E+SKXCNfSzHeMewNn2VwbGYPB6EazIIhmv2p30MG2fOMhO8Cq
-        zX/LxrDSS4Agmd/CGPp8eRXXROyc24XtY0fCkxSP7WxO166YsLDfmBkjJyvc1eP4ZF0eKQFe4gAjVtKG
-        4I1hEjO7yfyjRek4Vn5dUnONxSpzMhD9/uvwpv5JxqomRhZsM2No2gZ84C3dkGMHCN90WK5dMaEBLjZf
-        yObXtOBg8SsXLjlqg8UfRJdwk+4z84G3ZL0EeJkDvLh8U666bvUg29wp9Dh0aQPDdrtJ2LRVn0/Sxeuy
-        HQE25sp1awSNiHnp/rrdd4oPbt9h+LoVU425ift0JnCARWslwCsSYFmk+hXzMDNb9FFtZjZzQPeNobPG
-        8NORvvCXLCvAS7wevDNtcS2sRYSNKLN+pgQdJo5ao2433iM4nnHbT/fJwjWZ9hdYvP7gg3c79c3NZ9Aq
-        TLcagS8lhtxyBBaV+8K0nTUBnbAEH7V9xD9F2AGGzwlPcS1Yk4UFlEohgwZkYD4Nmh+RjvmrCavSMW9V
-        GuYyVhJWpGLOylTMJmbMCj+gsPwvzFzG2I+Z1P6RWLB0P35gLEkRTJsXX0Techvyf835pxH/m+RdyeBk
-        T4JXnwCvEfgdMg8b8i9aPKBx7dMJWAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAedEVYdFRpdGxlAExpbmVXaXRob3V0TWFya2VycztM
+        aW5lO7Sc8rcAAAbBSURBVFhHvVdpV1VVGKas1LLxL/QLssk+9KWVWWpqpq1VH1otV5nlnJoTDpgDJilK
+        KCqSAmEyi2gKKN7LBS6DoKKCojmDCN7LZbyX6el93733OQentexDrPWsZ+/37PM8zz57u/c1TP89TRjy
+        BHjmP+JZDW6zzlOEsKcTM08VJmdX43FIYmQ9BJnMVUhkZD4a+zIMTgkSUstP6hBhQxLSKvF//+1M8YK8
+        +WuEPbMnVQXo6elHqKdPw7SZnVDPg44x3A5SOxjSz4gfh4GBAexILuUAz0mA3QcqMEABnAYPg5gIK0j9
+        PvHuh3B3qFf3mXvRTwG2OwPs2l9OqaBFeSZqNgI2czIJmGdKXCOoTMQsqPuEQEMjzv26FhVzp1vPOEBs
+        YgkHGMoBnt2ZUqYCaPGyOdNRtWIxWi7UaiNVt8Sl3YcuzWzURXXud8mYXnS0daI+aS88077E5QMp0u+i
+        eicH6B9AzL5iO0Dcn14JwC8GWay7B1dzc+D+5iuciYqE//pNednMSs2QzHgsm5q2xo3jBfB897W867vV
+        gM5uNmZdYgIH2Lq3yA7A68EBOL0SVEbtrW2oS07E8S+noCY2Bm0tvkFGDBYWkPDduovwLlkAz+wZaKw+
+        rYwFPRZ3dPWgjwJEJ7g5wDAO8FxsUonszAdEdT/Q1ILqbVuQ98VnqE1OQnug0yHei9ZmH6q3RuPYF5NR
+        n5ODDjbSpmzYwaxr7SbAHpcd4PfEYtkY/AJ/JvlUQZPaRvPlqyhZuQJHv5pKRofQ3hlEXXoGjkyehKqY
+        GLS2+MWQTcRQ2r3451QZ/pj6nvWst28Am3ef5ADDOcDQbbQevC7yichIpR+cnNvt3CeB26drkP/9DGSN
+        GY3CeXNxp65ehC10Km4jZvOEKaNwsbhQ6m1U7+3rR9QuR4CtCSqA+lwEZgd4Fu1UNwaq1oMbFVWWmdNU
+        jAhXKsuw5/NRqPMUSt+AA2yKO2EHiN7jlnUxBk5BYX7RIW4MTM2JgGY2j5/8LpmfQKBD1Q16evuxccdx
+        DvA8Bxi2Od5lBbhf0AkjLkyiUmdxY6D5coUX8ZPeQa37BFr1c2aDEAWIjC2wA/xG69FHG8OIJ9CGueT1
+        WIKWie6LSUPAEheDdiVeX+7Frolv44JLmXPdL89C1hg+bTf8ns8BXuAAw6N2FsrONGKXSj20du8Kt7Ih
+        C2kESMh1tgEfLsrA6J8zMS/WhX15tai/HcCl8lIxP8/m7SEx9j/AKsC6bXl2gA2x+bIu9sAQ6kqKEP8Z
+        rWFxkVXzt4VQfK4RY5cdxPGqm2jydeFYxXVEJHoxbkk6Js6MRWRcLspq78BHY/2BoLACtQOK+fheveUo
+        BxghAdbF5EkqNvC3UQhhFWI3rWVdiVv6npoGjF2ajYJTN6lvi1/0liLu07eQlXYU0RnVmBKRiwnhB7E2
+        uQx5FTdwl4LeozAMH4GP7lW/HbECPL+WPocKEJTUbKZmEEKtx42dE97GoewCfLI4CwWVN5SQnlFdaQni
+        xr+JmsICqocso7NXWhCXcxbfRuVjNC3Xojg3bjd3yDM+1FZESYAXJcCa6KN03fbrGamUJi2b5GQV4INZ
+        e5GWli99ZULhSmnm40ei5gSbq3futSpuYSYw199qRbbnCrW7pc8BwqMOWwFeiOAA9BvAGCshNgqh6Mxt
+        fEybLTU1DzvGjcT5IpcI19LMd4x7A2fZXBsZg8HoRrMgiGa/anfQwbZ84yE7wKrNf8vGsNJLgCCZ38IY
+        +nx5FddE7Jzbhe1jR8KTFI/tbE7XrpiwsN+YGSMnK9zV4/hkXR4pAV7iACNW0obgjWESM7vJ/KNF6ThW
+        fl1Sc43FKnMyEP3+6/Cm/knGqiZGFmwzY2jaBnzgLd2QYwcI33RYrl0xoQEuNl/I5te04GDxKxcuOWqD
+        xR9El3CT7jPzgbdkvQR4mQO8uHxTrrpu9SDb3Cn0OHRpA8N2u0nYtFWfT9LF67IdATbmynVrBI2Ieen+
+        ut13ig9u32H4uhVTjbmJ+3QmcIBFayXAKxJgWaT6FfMwM1v0UW1mNnNA942hs8bw05G+8JcsK8BLvB68
+        M21xLaxFhI0os36mBB0mjlqjbjfeIziecdtP98nCNZn2F1i8/uCDdzv1zc1n0CpMtxqBLyWG3HIEFpX7
+        wrSdNQGdsAQftX3EP0XYAYbPCU9xLViThQWUSiGDBmRgPg2aH5GO+asJq9Ixb1Ua5jJWElakYs7KVMwm
+        ZswKP6Cw/C/MXMbYj5nU/pFYsHQ/fmAsSRFMmxdfRN5yG/J/zfmnEf+b5F3J4GRPglefAK8R+B0yDxvy
+        L1o8oHHt0wlYAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="bbiDailyProfitReportExport.Glyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAbdEVYdFRpdGxlAFN0YWNrZWRDb2x1bW47Q29sdW1u
+        O6vl2UAAAAKxSURBVDhPZZLJT1NRFMbfv+HCjSFhoQkLo0El0WhMNEYSwUgUGYOKYmUqwTK0UBAVqEXA
+        EEdQjDEyF0JBoC1zmBMXBBdGXCmItLwOb+hrP+87pYBx8Xv3nvvO992Tew7X+H5phIGGVpVFov5dmAU8
+        fRuirkVlHubmeTx5M0eYXs+OcFVNUwgCIdhnZ/2P4DZAgAiivH4cXOWzSToURAU+0c9Q4KXVT6uX4tCZ
+        R9glwFwMdWPgKhonyGAnmf0MQ8m+EM0TP2C0rODV6He4fTIUZqA3O8CpZajlhJzlbUJ7NZHf5taLaThW
+        JcRWfGaxBEUJoNhkB6c3j1E5bnZLWKDuH1uWccU8jvutC+C9EpLYRQ9tPM4W98LlkSEzA121DVypyUHl
+        8F4ZW3tIrJ+E5auAM6VWEsRXj6BkwIWY/Ha43BJkfwCFj4bBFdXa4VeCJFITXR6JuFQzGhIU9MDJBEvP
+        NRBX22Eri8MmL0GSFRRUDe0alHat4ELdDDQtS2QwWZMMz2INLDmnyWCxKQvCtw8YKon910AtQ2LlxDbM
+        UskxBhtLEDH2IAH8lB4dmSewsSViruEGfMsvYdWew4ZLoDbnGgfBaZmLKAfgMF6G90sj2m4eI4HDGI8t
+        ex4+ZUTjNxNMn4+G21SEvsMRWGexl3Upu8wKLq9yEIKkYD7uJPjqQgzHHGICETMXj8Ndq8PA0UgSjJ6K
+        Am/SoePgfqw7fdQxjaEfXG75AA3RtCYD1iORmLidRoLxzFT0RB2APSMJa5s+DKVcxceIfRhMSqCYZw+e
+        VdIHLttgpcFZcwr0Yy+/NgWGuu7y84+Klx76TjEzuKvvp8FR5yAMzQK7QSXcVoJ1w+kWqSvqQ2fqesGl
+        F3Rb07XdSNN2IZWRkt+JlLxOJOd2ENdz2ndIzA7Thmv3VNqsfwFbokslxuQWOQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="bbiDailyProfitReportExport.LargeGlyph" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAbdEVYdFRpdGxlAFN0YWNrZWRDb2x1bW47Q29sdW1u
+        O6vl2UAAAAgbSURBVFhHvZd5UJXnFcZpzGa2pv2/7bTN2MSaWBMTY6yNbU1aNYvW0TSIiRsKigrRCMgi
+        oAiERXYVBBURBWWTRRKogAgKCgyCIIuKW6lFucDdL8vTc8733SUZ64z9o8z85rzfd957nudd7vtenNS/
+        J4gJj8GT/yNPqXCb6/yIcHoiI6+xMrOgGY/iCJP/EPI4NiGDyfvvHM610iik5zRUqSacJqSfuIT/99/+
+        rAsgbZ4NpyfTchQDFssYzJZRFWuboyNK3uTQh9smapvMao7ioxgfH8fezPNs4GkxkJp9EeNkwFHgYYiI
+        RAV5/4PixodEo3lEfeY4gjEykOxoIOVYA7mCWpRHooxGYDHHSAWsOaW4ikkRYYHC+ltI/rYTyaUdSCxp
+        R1xRO7JrrkvOaBoVA0kZdWzgGTbw1P6sesXAD4rb28p7awGrqEGNLG6g9/xsoD5JJHxTYyZM6BXMCD/Z
+        Qn1GoGcDY+NIOFxrN7Dv6AUxwIVMUoyFlKhAhb/3bEdvxWiPsUVX0NpnQEHbgNDyTz1CjjfDwH0INhB3
+        qMZugNeDDbB7HoWtKCFCanGOIqoW+j4W6NR2ZH4rmu7ocKLlgXDptg7+mReVPgYLRslAbPpZNvAsG3g6
+        6Uid7EzbyLiQyeJQ3A6L6KiQIqj0kXcGRhEIzWnGhV4tspruC+d7h7Et/YL011oNpFXbDSRm1MrG4GIs
+        bhdQ2goj0IqQBTnnbiCm8Aqi8tsQntuK0BMtOFjRJcWZwKONKGvXILGqDwnVfSi9ooFnSp18lvMjo+OI
+        Sa1iAxPZwDPxtB68Lo6ijzIQScI9D0zodsDvyCWbgXPhzjDdKoehdR8Ml/fC1FuGyqDF0OotGBYDY4hK
+        cTAQl64YkClkMY4OaGl6tfTeKhCa04Kmu3pk0/rm8Brf0WNrer3khkmkeucSmK7lQ98UBV1jJIzduSj3
+        +0RyDBuI3HfGbiA27aysi1VAoI62yB9Ui3M7IKsJDbf1ON7cj2NE/S0tNqXUSn6IOBO4CMbO49BeDIOu
+        YTcMV7Pw7bZ5kmMsI2OI2PsPNvAcG3g25kC1zYDV5cPgD3P0PtyAuptaHKUNltnYj3O04dYlncWQTulT
+        vv0jGNszoL0QDO35IBiuHETplg8wSHnGTAbCkyrsBqJpPUZpYziKiFu14DBHK/TMG6q0gzZZ9V2iDyXU
+        XrWnUhHQWkhsLvStKdDWBUBb6w9Dyz6c8pgtOTFAp21YYjkbeJ4NTIzaXyk70yoSn9cKz6RaeCaqJNQi
+        7mSrfHhIZ6Yp/gSmO6U0sr0wtCXThitGxfYF0FCOYTF94x4MVXphuNIT+ovRyFs7AxoywLCB0Pjv7AbC
+        ksplXZQOZmyMq8HpnmGc7rbjEVsDzTAJEOW+82iTZUPXHCGYerJQtu1DDFBuYMiMArf3MFTlh4GiFdAU
+        fklGfJC75m3JDQyb5PgO2lPGBl4QA6EJ34krRcAC9+hqpNP6xtL3mDlw6T7coqpEgPuc3vJn2ljp0Dbs
+        JEJgaD+AEs85NoEjc/6KO98E4PpXq4Tb4X7IeP9DPBgyUR8THXaj2BFdajPw3C6aDsWACRrq4BpRiQgS
+        DijqRUDhDYRX3MXqiDOKAFG86Q/Qt8RiuGYrhghdczQKN8wiAbOIHJo9FzcDN6Nn3VL0uC3FzQAPHJz1
+        J8kxfOAFRImBF8VASGwZXbdjyhSSidooFxi7jtJBEk8HCXH1EE37fJuBAveZGDrrg4HilcQKDFV/TWv8
+        jiIwaEL6e39Er487elz/RizGDe91SHv3fdwfNBKKAf+oEpuB54PZAP0G4OnhImd3LYWuJQHa+iDo6gOh
+        bY6haZ8rxTmfSsWub1+PjrVLhWsktvetWTaB1Hdm48bW1ehavQjdqxfSMqxEyvTfo19jRD/14XvDL6LI
+        bmBHzGnZGFaByqBFMq3a8/4YrvOF9lIYSjbPkeLMfirW5eGCtmUL0OayAJ3rlyFh6rtioJ/zb87CtU1f
+        oGvFp+j68lP0eCzHvmkz8W82QL8P+GT1CxcDL7GBFwJpQ/DGUASMqPD/GIPV3tCUuRFroanwwqmNs6U4
+        jyKJivHI2z6fh1bneehYswR7pkxXRkgCyVNnoMfdGZ1ffER8jG63z5D8xgwxwPCB5xt2ym7AP7JErmE2
+        wEVSZ87BDd/1NIrluLZxOa57uyH2dRbgvAmxU95G+4qFuPzZX4QrNMrIV39nE0gkM12uS3CVZ4foWrMY
+        CZOnS+4ewQedz24x8GM28KJfZLFsDBbnTsm0nt0bXdC5ahGxEN3uf8c3k6baBKJIrG3ZfFxe8oHQ5jwf
+        Yb+eQjmDCMS/9iZN/0J00OxcZWgp4l6dJrl71IdPU+/QAgcDEcVy3VoFstd4IGbyWyQ0TYTDXnkdGS6u
+        UoDzmctdEf7KFBL9LUJ/NRmhv3wNh51XS3Huc8h5JYJ/8RuEEEE/n4Tgn01C2ucrcG/AiH8NKAa+3iUG
+        XhYD28NPyTVsFWCsbWtRhYe1ORqksA312Sro+I7R0JG+dWe+zcBLvB68M+3F1cJqEYnWohzVnFLQQcTh
+        XZ/a7ntAOOS4zffF1pA8+wx47y603fc26FluRAcGJZopmuVSYgZV5CKie8R6IdngdwKdssQAtQcofhVs
+        NzBxk39W9ZaQfGwhVwq51CEXXtTJK/gkvIKIHSfhueMENjOBREAONgXmYCNFxsM/W8HvODZsZ45hA7XX
+        UxR8j8Gd8ckSVnkeqCFtuQ35X3P+acTfSd6VDDt7HH7yGPyU4M+QuNOE/wAIsPii1XPyGgAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <metadata name="defaultLookAndFeelMainForm.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
