--- a/src/Presentation/CTM.Win/Forms/InvestorStudio/FrmHomePage.resx
+++ b/src/Presentation/CTM.Win/Forms/InvestorStudio/FrmHomePage.resx
@@ -133,6 +133,9 @@
         knnYOUXXD9NKheoC25U6AAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="ttcPosition.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="tpProfitChart.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABB0RVh0VGl0
